formatter + cleanup