@@ -13,7 +13,7 @@ import com.baselet.control.Constants.Os;
 import com.baselet.control.Constants.SystemInfo;
 
 public class BrowserLauncher {
-	
+
 	private static final Logger log = Logger.getLogger(BrowserLauncher.class);
 
 	public static void openURL(String url) {
@@ -32,16 +32,23 @@ public class BrowserLauncher {
 					Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[] { String.class });
 					openURL.invoke(null, new Object[] { url });
 				}
-				else if (SystemInfo.OS == Os.WINDOWS) Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+				else if (SystemInfo.OS == Os.WINDOWS) {
+					Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+				}
 				else { // assume Unix or Linux
-					String[] browsers = {
-							"firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape" };
+					String[] browsers = {"firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape" };
 					String browser = null;
-					for (int count = 0; (count < browsers.length) && (browser == null); count++)
-						if (Runtime.getRuntime().exec(
-								new String[] { "which", browsers[count] }).waitFor() == 0) browser = browsers[count];
-					if (browser == null) throw new Exception("Could not find web browser");
-					else Runtime.getRuntime().exec(new String[] { browser, url });
+					for (int count = 0; count < browsers.length && browser == null; count++) {
+						if (Runtime.getRuntime().exec(new String[] { "which", browsers[count] }).waitFor() == 0) {
+							browser = browsers[count];
+						}
+					}
+					if (browser == null) {
+						throw new Exception("Could not find web browser");
+					}
+					else {
+						Runtime.getRuntime().exec(new String[] { browser, url });
+					}
 				}
 			}
 		} catch (Exception e) {
